About us, and debugging
Created about us page, and tried to debug.

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -34,6 +34,36 @@ body {
   min-height: 100vh;
 }
 
+#clearSearch {
+  &:hover {
+    background-color: red;
+  }
+}
+
+.auctions {
+  .card {
+    transition: transform 0.2s;
+    &:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 8px 10px rgba(0, 0, 0, 0.1);
+    }
+    .card-img-top {
+      border-bottom: 1px solid#eee;
+    }
+    .card-titel {
+      font-size: 1.25rem;
+      font-weight: 600;
+    }
+    .card-text {
+      font-size: 0.9rem;
+      font-weight: 600;
+    }
+    .btn-primary {
+      font-weight: 500;
+    }
+  }
+}
+
 footer {
   background-color: #6c757d;
   padding: 1rem;
